force-app/main/default/objects/LLC_BI__Risk_Grade_Template__c/LLC_BI__Risk_Grade_Template__c.object-meta.xml
<CustomObject>
    <label>Risk Grade Template</label>
    <nameField>
        <label>Risk Grade Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Grade Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>