force-app/main/default/objects/LLC_BI__Risk_Grade_Template__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users populate this optional checkbox field to indicate if a Risk Grade Template record should be an available template option when creating a risk rating review. When enabled, a Risk Grade Template can be used as the basis of a Risk Rating Review. When disabled, that Risk Grade Template cannot be used as the template when creating a new Risk Rating Review.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>