force-app/main/default/objects/LLC_BI__Risk_Grade_Template__c/fields/LLC_BI__Round_Final_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Round_Final_Risk_Grade__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, the final risk grade will be a round number. If deselected, then the final risk grade will be a decimal number.</description>
    <inlineHelpText>If checked then the final risk grade will be a round number. If unchecked then the final risk grade will be a decimal number.</inlineHelpText>
    <label>Round Final Risk Grade</label>
    <type>Checkbox</type>
</CustomField>