force-app/main/default/objects/LLC_BI__Risk_Grade_Template__c/fields/LLC_BI__Template_Object_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template_Object_Field_Value__c</fullName>
    <description>This field is optional. It is manually populated. This field is used to automatically select which risk grade template should be used as the template for a risk rating review during creation. To use this field, you can set the value which has to be entered or selected from the field in &quot;LLC_BI__Template_Object_Field_Name__c&quot; for this particular Risk Grade Template to be used during the creation of a Risk Rating Review.</description>
    <label>Template Object Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>