force-app/main/default/objects/LLC_BI__Risk_Grade_Template__c/fields/LLC_BI__Template_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template_Object_Type__c</fullName>
    <description>This field is optional. It is manually populated. This field is used to automatically select which risk grade template should be used as the template for a risk rating review during creation. To use this field, you can set the object you want this risk grade template to be associated with (ex: Account or LLC_BI__Loan__c).</description>
    <label>Template Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Loan__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>