force-app/main/default/objects/LLC_BI__Risk_Grade_Template__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Risk_Rating_Review__c</columns>
    <columns>LLC_BI__Round_Final_Risk_Grade__c</columns>
    <columns>LLC_BI__Template_Object_Field_Name__c</columns>
    <columns>LLC_BI__Template_Object_Field_Value__c</columns>
    <columns>LLC_BI__Template_Object_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LLC_BI__Risk_Rating_Review__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>