force-app/main/default/objects/LLC_BI__Risk_Grade_Template__c/listViews/Templates_and_Reviews.listView-meta.xml
<ListView>
    <fullName>Templates_and_Reviews</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Risk_Rating_Review__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LLC_BI__Template_Object_Field_Name__c</columns>
    <columns>LLC_BI__Template_Object_Field_Value__c</columns>
    <columns>LLC_BI__Template_Object_Type__c</columns>
    <columns>LLC_BI__Round_Final_Risk_Grade__c</columns>
    <filterScope>Everything</filterScope>
    <label>Templates and Reviews</label>
    <language>en_US</language>
</ListView>